fixed menu alignment issue

--- a/styles.scss
+++ b/styles.scss
@@ -94,9 +94,7 @@ nav {
 		padding-left: 0px;
 	}
 	&>ul>li { border-top: 1px solid black; }
-	a { 
-		padding: 0px 5px;
-		color: #9fdff0; }
+	a { color: #9fdff0; }
 }
 
   footer {
